
load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_test")

java_library(
    name = "abstractresultset",
    srcs = [
        "src/main/java/io/debezium/connector/teradata/AbstractResultSet.java",
    ],
    visibility = ["//visibility:public"],
)

scala_library(
    name = "dataactor",
    srcs = [
        "DataActor.scala",
    ],
    deps = [
        ":rowiterable",
        "@com_typesafe_akka_akka_actor//jar",
    ],
)

scala_test(
    name = "dataactor_test",
    srcs = [
        "DataActorTest.scala",
    ],
    deps = [
        ":abstractresultset",
        ":dataactor",
        ":rowiterable",
        "@com_typesafe_akka_akka_actor//jar",
        "@com_typesafe_config//jar",
    ],
)

scala_library(
    name = "rowiterable",
    srcs = [
        "RowIterable.scala",
    ],
    visibility = ["//visibility:public"],
)
