
load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_test")

scala_library(
    name = "dataactor",
    srcs = [
        "DataActor.scala",
    ],
    deps = [
        ":rows",
        "@com_typesafe_akka_akka_actor//jar",
    ],
)

scala_test(
    name = "dataactor_test",
    srcs = [
        "DataActorTest.scala",
    ],
    deps = [
        ":dataactor",
        ":rows",
        "@com_typesafe_akka_akka_actor//jar",
        "@com_typesafe_config//jar",
    ],
)

scala_library(
    name = "rows",
    srcs = [
        "Rows.scala",
    ],
    deps = [
        "//debezium-core",
    ],
    visibility = ["//visibility:public"],
)
