load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_test")

scala_library(
    name = "logingraph",
    srcs = [
        "LoginGraph.scala",
    ],
    deps = [
        "//exasol:command",
        "@com_typesafe_akka_akka_actor//jar",
        "@com_typesafe_akka_akka_http_core//jar",
        "@com_typesafe_akka_akka_stream//jar",
        "@com_typesafe_akka_parsing//jar",
    ],
)

scala_test(
    name = "logingraph_test",
    srcs = [
        "LoginGraphTest.scala",
    ],
    data = [
        "test.conf",
    ],
    jvm_flags = [
        "-Dconfig.file=$(location test.conf)",
    ],
    deps = [
        "//exasol:command",
        ":logingraph",
        "@com_fasterxml_jackson_core_jackson_annotations//jar",
        "@com_fasterxml_jackson_core_jackson_databind//jar",
        "@com_thoughtworks_paranamer_paranamer//jar",
        "@com_typesafe_config//jar",
        "@com_typesafe_akka_akka_actor//jar",
        "@com_typesafe_akka_akka_http_core//jar",
        "@com_typesafe_akka_akka_stream//jar",
        "@com_typesafe_akka_akka_stream_testkit//jar",
        "@com_typesafe_akka_akka_testkit//jar",
        "@com_typesafe_ssl_config_core//jar",
        "@org_json4s_json4s_scalap//jar",
        "@org_reactivestreams_reactive_streams//jar",
        "@org_scala_lang_modules_scala_parser_combinators//jar",
    ],
    tags = ["local"],
)
