
load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_test")

scala_library(
    name = "command",
    srcs = [
        "ExasolCommand.scala",
    ],
    deps = [
        "@com_fasterxml_jackson_core_jackson_core//jar",
        "@com_typesafe_akka_akka_http_core//jar",
        "@com_typesafe_akka_akka_stream//jar",
        "@org_json4s_json4s_ast//jar",
        "@org_json4s_json4s_core//jar",
        "@org_json4s_json4s_jackson//jar",
    ],
    visibility = ["//visibility:public"],
)
