
load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_test")

py_binary(
    name = "encrypter",
    srcs = [
        "encrypt.py",
    ],
    main = "encrypt.py",
)

scala_library(
    name = "command",
    srcs = [
        "ExasolCommand.scala",
    ],
    data = [
        ":encrypter",
    ],
    deps = [
        "@com_fasterxml_jackson_core_jackson_core//jar",
        "@com_typesafe_akka_akka_http_core//jar",
        "@com_typesafe_akka_akka_stream//jar",
        "@org_json4s_json4s_ast//jar",
        "@org_json4s_json4s_core//jar",
        "@org_json4s_json4s_jackson//jar",
    ],
    visibility = ["//visibility:public"],
)

scala_test(
    name = "command_test",
    srcs = [
        "ExasolCommandTest.scala",
    ],
    deps = [
        ":command",
        "@com_fasterxml_jackson_core_jackson_annotations//jar",
        "@com_fasterxml_jackson_core_jackson_core//jar",
        "@com_fasterxml_jackson_core_jackson_databind//jar",
        "@com_thoughtworks_paranamer_paranamer//jar",
        "@org_json4s_json4s_ast//jar",
        "@org_json4s_json4s_core//jar",
        "@org_json4s_json4s_jackson//jar",
        "@org_json4s_json4s_scalap//jar",
    ],
)
